Generify the lists