@@ -2,27 +2,28 @@ package trivia;
 
 import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.List;
 
 public class Game implements IGame {
-   ArrayList players = new ArrayList();
+   List<String> players = new ArrayList<>();
    int[] places = new int[6];
    int[] purses = new int[6];
    boolean[] inPenaltyBox = new boolean[6];
 
-   LinkedList popQuestions = new LinkedList();
-   LinkedList scienceQuestions = new LinkedList();
-   LinkedList sportsQuestions = new LinkedList();
-   LinkedList rockQuestions = new LinkedList();
+  List<String> popQuestions = new LinkedList<>();
+  List<String> scienceQuestions = new LinkedList<>();
+  List<String> sportsQuestions = new LinkedList<>();
+  List<String> rockQuestions = new LinkedList<>();
 
    int currentPlayer = 0;
    boolean isGettingOutOfPenaltyBox;
 
    public Game() {
       for (int i = 0; i < 50; i++) {
-         popQuestions.addLast("Pop Question " + i);
-         scienceQuestions.addLast(("Science Question " + i));
-         sportsQuestions.addLast(("Sports Question " + i));
-         rockQuestions.addLast(createRockQuestion(i));
+         popQuestions.add("Pop Question " + i);
+         scienceQuestions.add(("Science Question " + i));
+         sportsQuestions.add(("Sports Question " + i));
+         rockQuestions.add(createRockQuestion(i));
       }
    }
 
@@ -87,16 +88,16 @@ public class Game implements IGame {
 
    }
 
-   private void askQuestion() {
-      if (currentCategory() == "Pop")
-         System.out.println(popQuestions.removeFirst());
-      if (currentCategory() == "Science")
-         System.out.println(scienceQuestions.removeFirst());
-      if (currentCategory() == "Sports")
-         System.out.println(sportsQuestions.removeFirst());
-      if (currentCategory() == "Rock")
-         System.out.println(rockQuestions.removeFirst());
-   }
+    private void askQuestion() {
+        if (currentCategory() == "Pop")
+            System.out.println(popQuestions.remove(0));
+        if (currentCategory() == "Science")
+            System.out.println(scienceQuestions.remove(0));
+        if (currentCategory() == "Sports")
+            System.out.println(sportsQuestions.remove(0));
+        if (currentCategory() == "Rock")
+            System.out.println(rockQuestions.remove(0));
+    }
 
 
    private String currentCategory() {
